--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 
 
-      <li>
+      <li class="select">
         <select id="MovieId" class="ytMovie" name="ytMovie">
           <option selected>選択してください。</option>
           <option value="kHW-UVXOcLU">IU『Shopper』MV</option>
@@ -330,6 +330,8 @@
 
 
   <script>
+
+
     // 2. This code loads the IFrame Player API code asynchronously.
     // 2. 変数tagにscriptタグを作って入れる。Element=要素、Attrubute=属性
     var tag = document.createElement("script");
